--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "HectorLopez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
