--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "HectorLopez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.7"
+    "mongoose": "^5.13.7",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
